plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.4'
    id 'io.spring.dependency-management' version '1.1.7'
    id "org.flywaydb.flyway" version "6.4.3"
    id 'jacoco'
    id 'io.swagger.core.v3.swagger-gradle-plugin' version '2.2.30'
}

group = 'ru.perm.v'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}


repositories {
    // Use JCenter for resolving dependencies.
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // https://mvnrepository.com/artifact/org.hibernate/hibernate-jpamodelgen
    compileOnly("org.hibernate:hibernate-jpamodelgen:6.6.5.Final")
    // Spring Cache
    implementation 'org.springframework.boot:spring-boot-starter-cache'

    // Caffeine cache provider (recommended)
    implementation 'com.github.ben-manes.caffeine:caffeine:3.1.5'

    // OpenApi doc
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
    // Swagger doc
    implementation 'io.springfox:springfox-swagger2:2.7.0'
    implementation 'io.springfox:springfox-swagger-ui:2.7.0'

    runtimeOnly 'org.postgresql:postgresql'


    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

jacoco {
    toolVersion = "0.8.7"
}

test {
    finalizedBy jacocoTestReport
    filter {
        //exclude a INTEGRATION test class.
        excludeTestsMatching "*IntegrationTest"
    }
}


tasks.named('test') {
    useJUnitPlatform()
}

springBoot {
    buildInfo()
}

apply plugin:'war'

war {
    enabled=true
}
